YUK-20523 Remote CI Meter Config Summary back-end/review changes